--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <img src="Tech Hacker.png" alt="" id="img1">
+        <h1 id="heading">
+            My <span>Fav</span>orites Recipies
+        </h1>
+        <h3 id="head2">
+            Creator: <span>Devansh Rajesh Singh</span>
+        </h3>
+    </header>
+    <div id="labmove"><label id="myLabel">Time</label></div>
+    <h1 id="recp1">
+        Recipies
+    </h1>
+
+
+    <script src="main.js"></script>
+
 </body>
 </html>
