Added some essentials

--- a/index.html
+++ b/index.html
@@ -4,19 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Tech Gamer</title>
 </head>
 <body>
     <header>
-        <img src="Tech Hacker.png" alt="" id="img1">
+        <img src="Tech Gamer.jpg" alt="" id="img1">
         <h1 id="heading">
-            My <span>Fav</span>orites Recipies
+             <span>Tech</span> Gamer
         </h1>
-        <h3 id="head2">
-            Creator: <span>Devansh Rajesh Singh</span>
-        </h3>
+        <div id="menu">
+           <label> <a href="https://www.youtube.com/@tech-gameryt"  id="youtube1" target="_blank">Youtube</a></label>
+           <label> <a href="https://discord.gg/AECV66ywNj"  class="youtube" target="_blank">Discord</a></label>
+           <label> <a href="https://www.roblox.com/users/2590569758/profile"  class="youtube" target="_blank">Roblox</a></label>
+           <label> <a href="https://github.com/techgamer1006"  class="youtube" target="_blank">Github</a></label>
+        </div>
     </header>
     <div id="labmove"><label id="myLabel">Time</label></div>
+
+    
 
 
     <script src="main.js"></script>
