--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
            <label> <a href="https://github.com/techgamer1006"  class="youtube" target="_blank">Github</a></label>
         </div>
     </header>
+    <div id="labmove"><label id="myLabel">Time</label></div>
 
     
 
