adding another page

--- a/Code/code.html
+++ b/Code/code.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/tech-gameryt/style.css">
     <title>Tech Gamer</title>
 </head>
 <body>
@@ -23,12 +23,11 @@
     </header>
     <div id="labmove"><label id="myLabel">Time</label></div>
 
-    <label> <a href="/tech-gameryt/Code/code.html"  class="youtube" target="_blank">code</a></label>
     
 
 
 
-    <script src="main.js"></script>
+    <script src="/tech-gameryt/main.js"></script>
 
 </body>
 </html>
