--- a/Codes and Updates/updates.html
+++ b/Codes and Updates/updates.html
@@ -13,12 +13,10 @@
              <span>Tech</span> Gamer
         </h1>
         <div id="menu">
-           <label> <a href="https://www.youtube.com/@tech-gameryt"  id="youtube1" target="_blank">Youtube</a></label>
-           <label> <a href="https://discord.gg/AECV66ywNj"  class="youtube" target="_blank">Discord</a></label>
-           <label> <a href="https://www.roblox.com/users/2590569758/profile"  class="youtube" target="_blank">Roblox</a></label>
-           <label> <a href="https://github.com/techgamer1006"  class="youtube" target="_blank">Github</a></label>
-           <label> <a href="https://github.com/techgamer1006"  class="youtube" target="_blank">Github</a></label>
-        
+            <label> <a href="/tech-gameryt/About Me/about.html"  id="youtube1" target="_blank">About Me</a></label>
+            <label> <a href="/tech-gameryt/Code/code.html"  class="youtube" target="_blank">Programming</a></label>
+            <label> <a href="/tech-gameryt/Codes and Updates/updates.html"  class="youtube" target="_blank">Codes and Updates</a></label>
+            <label> <a href="/tech-gameryt/Other/other.html"  class="youtube" target="_blank">Other</a></label>
         </div>
     </header>
     <div id="labmove"><label id="myLabel">Time</label></div>
