--- a/Other/other.html
+++ b/Other/other.html
@@ -3,29 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/tech-gameryt/style.css">
     <title>Tech Gamer</title>
 </head>
 <body>
     <header>
-       <a href="/tech-gameryt/index.html"> <img src="Tech Gamer.jpg" alt="" id="img1"></a>
+       <a href="/tech-gameryt/index.html"> <img src="/tech-gameryt/Tech Gamer.jpg" alt="" id="img1"></a>
         <h1 id="heading">
              <span>Tech</span> Gamer
         </h1>
         <div id="menu">
-           <label> <a href="/tech-gameryt/About Me/about.html"  id="youtube1" target="_blank">About Me</a></label>
-           <label> <a href="/tech-gameryt/Code/code.html"  class="youtube" target="_blank">Programming</a></label>
-           <label> <a href="/tech-gameryt/Codes and Updates/updates.html"  class="youtube" target="_blank">Codes and Updates</a></label>
-           <label> <a href="/tech-gameryt/Other/other.html"  class="youtube" target="_blank">Other</a></label>
+           <label> <a href="/tech-gameryt/About Me/about.html"  id="youtube1" >About Me</a></label>
+           <label> <a href="/tech-gameryt/Code/code.html"  class="youtube" >Programming</a></label>
+           <label> <a href="/tech-gameryt/Codes and Updates/updates.html"  class="youtube" >Codes and Updates</a></label>
+           <label> <a href="/tech-gameryt/Other/other.html"  class="youtube" >Other</a></label>
         </div>
     </header>
     <div id="labmove"><label id="myLabel">Time</label></div>
+    <main>
+    </main>
+
+    <footer id="footer">
+        <h1>hello</h1>
+    </footer>
+    
 
     
 
 
 
-    <script src="main.js"></script>
+    <script src="/tech-gameryt/main.js"></script>
 
 </body>
 </html>
