--- a/Code/code.html
+++ b/Code/code.html
@@ -13,16 +13,23 @@
              <span>Tech</span> Gamer
         </h1>
         <div id="menu">
-            <label> <a href="/tech-gameryt/About Me/about.html"  id="youtube1" target="_blank">About Me</a></label>
-            <label> <a href="/tech-gameryt/Code/code.html"  class="youtube" target="_blank">Programming</a></label>
-            <label> <a href="/tech-gameryt/Codes and Updates/updates.html"  class="youtube" target="_blank">Codes and Updates</a></label>
-            <label> <a href="/tech-gameryt/Other/other.html"  class="youtube" target="_blank">Other</a></label>
+            <label> <a href="/tech-gameryt/About Me/about.html"  id="youtube1" >About Me</a></label>
+            <label> <a href="/tech-gameryt/Code/code.html"  class="youtube" >Programming</a></label>
+            <label> <a href="/tech-gameryt/Codes and Updates/updates.html"  class="youtube" >Codes and Updates</a></label>
+            <label> <a href="/tech-gameryt/Other/other.html"  class="youtube" >Other</a></label>
         
         </div>
     </header>
     <div id="labmove"><label id="myLabel">Time</label></div>
 
+    <main>
+    </main>
+
+    <footer id="footer">
+        <h1>hello</h1>
+    </footer>
     
+
 
 
 
