--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <header>
-       <a href="index.html"> <img src="Tech Gamer.jpg" alt="" id="img1"></a>
+       <a href="/tech-gameryt/index.html"> <img src="Tech Gamer.jpg" alt="" id="img1"></a>
         <h1 id="heading">
              <span>Tech</span> Gamer
         </h1>
         <div id="menu">
-           <label> <a href="/About Me/about.html"  id="youtube1" >About Me</a></label>
-           <label> <a href="/Code/code.html"  class="youtube">Programming</a></label>
-           <label> <a href="/Codes and Updates/updates.html"  class="youtube" >Codes and Updates</a></label>
-           <label> <a href="/Other/other.html"  class="youtube">Other</a></label>
+           <label> <a href="/tech-gameryt/About Me/about.html"  id="youtube1" >About Me</a></label>
+           <label> <a href="/tech-gameryt/Code/code.html"  class="youtube">Programming</a></label>
+           <label> <a href="/tech-gameryt/Codes and Updates/updates.html"  class="youtube" >Codes and Updates</a></label>
+           <label> <a href="/tech-gameryt/Other/other.html"  class="youtube">Other</a></label>
         </div>
     </header>
     <div id="labmove"><label id="myLabel">Time</label></div>
