--- a/Code/code.html
+++ b/Code/code.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" href="/tech-gameryt/Tech Gamer.jpg" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/tech-gameryt/style.css">
@@ -26,7 +27,15 @@
     </main>
 
     <footer id="footer">
-        <h1>hello</h1>
+        <h1 id="footer-h1">Tech Gamer</h1>
+        <p id="footer-p">
+            Important Links - <br>
+            <i class="fa-brands fa-youtube fa-bounce" style="color: #ff0000;" id="icon"></i>
+            <a href="https://www.youtube.com/@tech-gameryt" target="_blank" id="footer-youtube">Youtube</a>
+            <i class="fa-brands fa-discord" id="icon"></i>
+            <a href="https://discord.gg/FzFQV27xud" target="_blank" id="footer-discord">Discord</a>
+            
+        </p>
     </footer>
     
 
@@ -34,6 +43,6 @@
 
 
     <script src="/tech-gameryt/main.js"></script>
-
+    <script src="https://kit.fontawesome.com/a74e1aff57.js" crossorigin="anonymous"></script>
 </body>
 </html>
