--- a/About Me/about.html
+++ b/About Me/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" href="/tech-gameryt/Tech Gamer.jpg" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/tech-gameryt/style.css">
@@ -21,10 +22,27 @@
     </header>
     <div id="labmove"><label id="myLabel">Time</label></div>
     <main>
+        <h2 id="about-div-header">About Me</h2>
+        <div> <a href="/tech-gameryt/About Me/about.html"> <img src="/tech-gameryt/Tech Gamer.jpg" alt="" id="img2"></a></div>
+        <div id="about-div1">
+            <h2 id="about-div-name">Tech Gamer</h2>
+            <h3 id="about-desc">Description</h3>
+            <p id="about-desc-p">Hi, I am Tech Gamer. I am a Youtuber, Programmer, Gamer, and Video Editor.
+                You can join me on Youtube, Discord to support me. Link given below ⬇⬇⬇⬇
+            </p>
+        </div>
     </main>
 
     <footer id="footer">
-        <h1>hello</h1>
+        <h1 id="footer-h1">Tech Gamer</h1>
+        <p id="footer-p">
+            Important Links - <br>
+            <i class="fa-brands fa-youtube fa-bounce" style="color: #ff0000;" id="icon"></i>
+            <a href="https://www.youtube.com/@tech-gameryt" target="_blank" id="footer-youtube">Youtube</a>
+            <i class="fa-brands fa-discord" id="icon"></i>
+            <a href="https://discord.gg/FzFQV27xud" target="_blank" id="footer-discord">Discord</a>
+            
+        </p>
     </footer>
     
 
@@ -33,6 +51,7 @@
 
 
     <script src="/tech-gameryt/main.js"></script>
+    <script src="https://kit.fontawesome.com/a74e1aff57.js" crossorigin="anonymous"></script>
 
 </body>
 </html>
