--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
       </nav>
     <!-- End Navebar -->
 
+<!-- main	 -->
+<h2 class="tech">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse reprehenderit reiciendis molestiae consequatur omnis laborum vitae earum repellat veniam explicabo eveniet repudiandae placeat fugiat velit sit, impedit nobis, veritatis tempora.</h2>
+
 <!-- Footor -->
 <footer class="bg-dark text-white pt-5 pb-4">
 
