--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 data-bs-toggle="collapse"
                 data-bs-target="#question-one"
               >
-                Where exactly are you located?
+                What exactly are we doing here?
               </button>
             </h2>
             <div
@@ -234,13 +234,7 @@
               data-bs-parent="#questions"
             >
               <div class="accordion-body">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-                beatae fuga animi distinctio perspiciatis adipisci velit maiores
-                totam tempora accusamus modi explicabo accusantium consequatur,
-                praesentium rem quisquam molestias at quos vero. Officiis ad
-                velit doloremque at. Dignissimos praesentium necessitatibus
-                natus corrupti cum consequatur aliquam! Minima molestias iure
-                quam distinctio velit.
+                We are helping you learn coding and gaming. Getting you better at!!
               </div>
             </div>
           </div>
@@ -253,7 +247,7 @@
                 data-bs-toggle="collapse"
                 data-bs-target="#question-two"
               >
-                How much does it cost to attend?
+                How much does it cost to learn?
               </button>
             </h2>
             <div
@@ -262,13 +256,7 @@
               data-bs-parent="#questions"
             >
               <div class="accordion-body">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-                beatae fuga animi distinctio perspiciatis adipisci velit maiores
-                totam tempora accusamus modi explicabo accusantium consequatur,
-                praesentium rem quisquam molestias at quos vero. Officiis ad
-                velit doloremque at. Dignissimos praesentium necessitatibus
-                natus corrupti cum consequatur aliquam! Minima molestias iure
-                quam distinctio velit.
+                Just free of cose !!
               </div>
             </div>
           </div>
@@ -290,13 +278,7 @@
               data-bs-parent="#questions"
             >
               <div class="accordion-body">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-                beatae fuga animi distinctio perspiciatis adipisci velit maiores
-                totam tempora accusamus modi explicabo accusantium consequatur,
-                praesentium rem quisquam molestias at quos vero. Officiis ad
-                velit doloremque at. Dignissimos praesentium necessitatibus
-                natus corrupti cum consequatur aliquam! Minima molestias iure
-                quam distinctio velit.
+                Just some basic of coding and gaming and if you don't know either of those I am working on a course to teach you that!!
               </div>
             </div>
           </div>
@@ -318,13 +300,8 @@
               data-bs-parent="#questions"
             >
               <div class="accordion-body">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-                beatae fuga animi distinctio perspiciatis adipisci velit maiores
-                totam tempora accusamus modi explicabo accusantium consequatur,
-                praesentium rem quisquam molestias at quos vero. Officiis ad
-                velit doloremque at. Dignissimos praesentium necessitatibus
-                natus corrupti cum consequatur aliquam! Minima molestias iure
-                quam distinctio velit.
+                Just Subscribe and join my discord to get started!! 
+                Easy
               </div>
             </div>
           </div>
@@ -346,13 +323,7 @@
               data-bs-parent="#questions"
             >
               <div class="accordion-body">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-                beatae fuga animi distinctio perspiciatis adipisci velit maiores
-                totam tempora accusamus modi explicabo accusantium consequatur,
-                praesentium rem quisquam molestias at quos vero. Officiis ad
-                velit doloremque at. Dignissimos praesentium necessitatibus
-                natus corrupti cum consequatur aliquam! Minima molestias iure
-                quam distinctio velit.
+                We help becuase we want people to just learn the basic. We don't help you get a job!!
               </div>
             </div>
           </div>
@@ -372,19 +343,19 @@
             <div class="card bg-light">
               <div class="card-body text-center">
                 <img
-                  src="https://randomuser.me/api/portraits/men/11.jpg"
-                  class="rounded-circle mb-3"
+                  src="/tech-gameryt/Tech Gamer.jpg"
+                  class="rounded-circle mb-3 w-100"
                   alt=""
                 />
-                <h3 class="card-title mb-3">John Doe</h3>
+                <h3 class="card-title mb-3">Tech Gamer</h3>
                 <p class="card-text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
+                  A Gamer, Programmer, and A youtuber <br>
+                  Helping you improve and <br> learn better  
                 </p>
-                <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
-                <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
-                <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
-                <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+                <a href="https://www.youtube.com/@tech-gameryt" target="_blank"><i class="bi bi-youtube text-dark mx-1"></i></a>
+                <a href="https://github.com/techgameryt0/" target="_blank"><i class="bi bi-github text-dark mx-1"></i></a>
+                <!-- <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a> -->
               </div>
             </div>
           </div>
@@ -393,45 +364,45 @@
             <div class="card bg-light">
               <div class="card-body text-center">
                 <img
-                  src="https://randomuser.me/api/portraits/women/11.jpg"
-                  class="rounded-circle mb-3"
+                  src="/tech-gameryt/uni.jpg"
+                  class="rounded-circle mb-3 w-100"
                   alt=""
                 />
-                <h3 class="card-title mb-3">Jane Doe</h3>
+                <h3 class="card-title mb-3">Uni</h3>
                 <p class="card-text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
+                  A Gamer<br>
+                  Helping you improve and <br> learn better  
                 </p>
-                <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
-                <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
-                <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
-                <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+                <!-- <a href="https://www.youtube.com/@tech-gameryt" target="_blank"><i class="bi bi-youtube text-dark mx-1"></i></a>
+                <a href="https://github.com/techgameryt0/" target="_blank"><i class="bi bi-github text-dark mx-1"></i></a> -->
+                <!-- <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a> -->
               </div>
             </div>
           </div>
 
-          <div class="col-md-6 col-lg-3">
+          <div class="col-md-6 col-lg-3 ">
             <div class="card bg-light">
               <div class="card-body text-center">
                 <img
-                  src="https://randomuser.me/api/portraits/men/12.jpg"
+                  src="/tech-gameryt/channels4_profile.jpg"
                   class="rounded-circle mb-3"
                   alt=""
                 />
-                <h3 class="card-title mb-3">Steve Smith</h3>
+                <h3 class="card-title mb-3">Kay</h3>
                 <p class="card-text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
+                  A Gamer, A youtuber <br>
+                  Helping you improve and <br> learn better  
                 </p>
-                <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
-                <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
-                <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
-                <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+                <a href="https://www.youtube.com/@Kayne346" target="_blank"><i class="bi bi-youtube text-dark mx-1"></i></a>
+                <!-- <a href="https://github.com/techgameryt0/" target="_blank"><i class="bi bi-github text-dark mx-1"></i></a> -->
+                <!-- <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a> -->
               </div>
             </div>
           </div>
 
-          <div class="col-md-6 col-lg-3">
+          <div class="col-md-6 col-lg-3 ">
             <div class="card bg-light">
               <div class="card-body text-center">
                 <img
@@ -439,15 +410,15 @@
                   class="rounded-circle mb-3"
                   alt=""
                 />
-                <h3 class="card-title mb-3">Sara Smith</h3>
+                <h3 class="card-title mb-3">Other</h3>
                 <p class="card-text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
+                  A Gamer, Programmer, and A youtuber <br>
+                  Helping you improve and <br> learn better  
                 </p>
-                <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
-                <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
-                <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
-                <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+                <a href="https://www.youtube.com/@tech-gameryt" target="_blank"><i class="bi bi-youtube text-dark mx-1"></i></a>
+                <a href="https://github.com/techgameryt0/" target="_blank"><i class="bi bi-github text-dark mx-1"></i></a>
+                <!-- <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a> -->
               </div>
             </div>
           </div>
@@ -479,7 +450,7 @@
     <!-- Footer -->
     <footer class="p-5 bg-dark text-white text-center position-relative">
       <div class="container">
-        <p class="lead">Copyright &copy; 2021 Frontend Bootcamp</p>
+        <p class="lead">Copyright &copy; 2023 Tech Gamer</p>
 
         <a href="#" class="position-absolute bottom-0 end-0 p-5">
           <i class="bi bi-arrow-up-circle h1"></i>
@@ -548,7 +519,7 @@
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
       crossorigin="anonymous"
     ></script>
-    <script src="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js"></script>
+    <!-- <script src="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js"></script>
 
     <script>
       mapboxgl.accessToken =
@@ -559,6 +530,6 @@
         center: [25.288524 ,  55.449051],
         zoom: 18,
       })
-    </script>
+    </script> -->
   </body>
 </html>
