--- a/index.html
+++ b/index.html
@@ -333,9 +333,9 @@
 
     <section id="instructors" class="p-5 bg-primary">
       <div class="container">
-        <h2 class="text-center text-white">Our Instructors</h2>
+        <h2 class="text-center text-white">Our Helpers</h2>
         <p class="lead text-center text-white mb-5">
-          Our instructors all have 5+ years working as a web developer in the
+          Our Helpers all have 5+ years working as a web developer and Gamer in the
           industry
         </p>
         <div class="row g-4">
