--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     />
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="/tech-gameryt/Tech Gamer.jpg" type="image/x-icon"/>
-    <title>A Gamer's Paradise</title>
+    <title>Gamer's Code Universe</title>
   </head>
   <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
       <div class="container">
-        <a href="/tech-gameryt/index.html" class="navbar-brand">A Gamer's Paradise</a>
+        <a href="/tech-gameryt/index.html" class="navbar-brand">Gamer's Code Universe</a>
 
         <button
           class="navbar-toggler"
@@ -121,7 +121,7 @@
                   Go to our youtube channel to see how we play and also learn with the process. 
                   Plus Subscribe!!
                 </p>
-                <a href="https://www.youtube.com/@tech-gameryt" class="btn btn-primary" target="_blank">Youtube</a>
+                <a href="https://techgameryt0.github.io/gamerscodeuniverse/" class="btn btn-primary" target="_blank">Youtube</a>
               </div>
             </div>
           </div>
@@ -352,7 +352,7 @@
                   A Gamer, Programmer, and A youtuber <br>
                   Helping you improve and <br> learn better  
                 </p>
-                <a href="https://www.youtube.com/@tech-gameryt" target="_blank"><i class="bi bi-youtube text-dark mx-1"></i></a>
+                <a href="https://techgameryt0.github.io/gamerscodeuniverse/" target="_blank"><i class="bi bi-youtube text-dark mx-1"></i></a>
                 <a href="https://github.com/techgameryt0/" target="_blank"><i class="bi bi-github text-dark mx-1"></i></a>
                 <!-- <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
                 <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a> -->
@@ -415,7 +415,7 @@
                   A Gamer, Programmer, and A youtuber <br>
                   Helping you improve and <br> learn better  
                 </p>
-                <a href="https://www.youtube.com/@tech-gameryt" target="_blank"><i class="bi bi-youtube text-dark mx-1"></i></a>
+                <a href="https://techgameryt0.github.io/gamerscodeuniverse/" target="_blank"><i class="bi bi-youtube text-dark mx-1"></i></a>
                 <a href="https://github.com/techgameryt0/" target="_blank"><i class="bi bi-github text-dark mx-1"></i></a>
                 <!-- <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
                 <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a> -->
