--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="/tech-gameryt/Tech Gamer.jpg" type="image/x-icon"/>
+    <link rel="icon" href="Tech Gamer.jpg" type="image/x-icon"/>
     <title>Gamer's Code Universe</title>
   </head>
   <body>
@@ -343,7 +343,7 @@
             <div class="card bg-light">
               <div class="card-body text-center">
                 <img
-                  src="/tech-gameryt/Tech Gamer.jpg"
+                  src="Tech Gamer.jpg"
                   class="rounded-circle mb-3 w-100"
                   alt=""
                 />
@@ -364,7 +364,7 @@
             <div class="card bg-light">
               <div class="card-body text-center">
                 <img
-                  src="/tech-gameryt/uni.jpg"
+                  src="uni.jpg"
                   class="rounded-circle mb-3 w-100"
                   alt=""
                 />
@@ -385,7 +385,7 @@
             <div class="card bg-light">
               <div class="card-body text-center">
                 <img
-                  src="/tech-gameryt/channels4_profile.jpg"
+                  src="channels4_profile.jpg"
                   class="rounded-circle mb-3"
                   alt=""
                 />
