--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               </a>
               <ul class="dropdown-menu ">
                 <li><a class="dropdown-item" href="https://discord.gg/sHsr3Dq8S7" target="_blank">Discord</a></li>
-                <li><a class="dropdown-item" href="https://www.youtube.com/@tech-gameryt" target="_blank">Youtube</a></li>
+                <li><a class="dropdown-item" href="https://youtube.com/@gamerscodeuniverse" target="_blank">Youtube</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="https://github.com/techgameryt0/ " target="_blank">Github</a></li>
               </ul>
@@ -121,7 +121,7 @@
                   Go to our youtube channel to see how we play and also learn with the process. 
                   Plus Subscribe!!
                 </p>
-                <a href="https://techgameryt0.github.io/gamerscodeuniverse/" class="btn btn-primary" target="_blank">Youtube</a>
+                <a href="https://youtube.com/@gamerscodeuniverse" class="btn btn-primary" target="_blank">Youtube</a>
               </div>
             </div>
           </div>
@@ -352,7 +352,7 @@
                   A Gamer, Programmer, and A youtuber <br>
                   Helping you improve and <br> learn better  
                 </p>
-                <a href="https://techgameryt0.github.io/gamerscodeuniverse/" target="_blank"><i class="bi bi-youtube text-dark mx-1"></i></a>
+                <a href="https://youtube.com/@gamerscodeuniverse" target="_blank"><i class="bi bi-youtube text-dark mx-1"></i></a>
                 <a href="https://github.com/techgameryt0/" target="_blank"><i class="bi bi-github text-dark mx-1"></i></a>
                 <!-- <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
                 <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a> -->
@@ -373,7 +373,7 @@
                   A Gamer<br>
                   Helping you improve and <br> learn better  
                 </p>
-                <!-- <a href="https://www.youtube.com/@tech-gameryt" target="_blank"><i class="bi bi-youtube text-dark mx-1"></i></a>
+                <!-- <a href="https://youtube.com/@gamerscodeuniverse" target="_blank"><i class="bi bi-youtube text-dark mx-1"></i></a>
                 <a href="https://github.com/techgameryt0/" target="_blank"><i class="bi bi-github text-dark mx-1"></i></a> -->
                 <!-- <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
                 <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a> -->
@@ -415,7 +415,7 @@
                   A Gamer, Programmer, and A youtuber <br>
                   Helping you improve and <br> learn better  
                 </p>
-                <a href="https://techgameryt0.github.io/gamerscodeuniverse/" target="_blank"><i class="bi bi-youtube text-dark mx-1"></i></a>
+                <a href="https://youtube.com/@gamerscodeuniverse" target="_blank"><i class="bi bi-youtube text-dark mx-1"></i></a>
                 <a href="https://github.com/techgameryt0/" target="_blank"><i class="bi bi-github text-dark mx-1"></i></a>
                 <!-- <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
                 <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a> -->
