--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
       <div class="container">
-        <a href="/tech-gameryt/index.html" class="navbar-brand">Gamer's Code Universe</a>
+        <a href="#" class="navbar-brand">Gamer's Code Universe</a>
 
         <button
           class="navbar-toggler"
