--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <li><a class="dropdown-item" href="https://discord.gg/sHsr3Dq8S7" target="_blank">Discord</a></li>
                 <li><a class="dropdown-item" href="https://youtube.com/@gamerscodeuniverse" target="_blank">Youtube</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="https://github.com/techgameryt0/ " target="_blank">Github</a></li>
+                <li><a class="dropdown-item" href="https://github.com/gamerscodeuniverse " target="_blank">Github</a></li>
               </ul>
             </li>
           </ul>
@@ -151,7 +151,7 @@
                   Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                   Iure, quas quidem possimus dolorum esse eligendi?
                 </p>
-                <a href="https://github.com/techgameryt0/" class="btn btn-primary" target="_blank">Github</a>
+                <a href="https://github.com/gamerscodeuniverse/" class="btn btn-primary" target="_blank">Github</a>
               </div>
             </div>
           </div>
@@ -200,7 +200,7 @@
               quae similique laboriosam iste minus placeat odit velit quos,
               nulla architecto amet voluptates?
             </p> -->
-            <a href="https://github.com/techgameryt0/" target="_blank"  class="btn btn-light mt-3">
+            <a href="https://github.com/gamerscodeuniverse/" target="_blank"  class="btn btn-light mt-3">
               <i class="bi bi-chevron-right"></i> Read More
             </a>
           </div>
@@ -353,7 +353,7 @@
                   Helping you improve and <br> learn better  
                 </p>
                 <a href="https://youtube.com/@gamerscodeuniverse" target="_blank"><i class="bi bi-youtube text-dark mx-1"></i></a>
-                <a href="https://github.com/techgameryt0/" target="_blank"><i class="bi bi-github text-dark mx-1"></i></a>
+                <a href="https://github.com/gamerscodeuniverse" target="_blank"><i class="bi bi-github text-dark mx-1"></i></a>
                 <!-- <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
                 <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a> -->
               </div>
@@ -374,7 +374,7 @@
                   Helping you improve and <br> learn better  
                 </p>
                 <!-- <a href="https://youtube.com/@gamerscodeuniverse" target="_blank"><i class="bi bi-youtube text-dark mx-1"></i></a>
-                <a href="https://github.com/techgameryt0/" target="_blank"><i class="bi bi-github text-dark mx-1"></i></a> -->
+                <a href="https://github.com/gamerscodeuniverse" target="_blank"><i class="bi bi-github text-dark mx-1"></i></a> -->
                 <!-- <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
                 <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a> -->
               </div>
@@ -395,7 +395,7 @@
                   Helping you improve and <br> learn better  
                 </p>
                 <a href="https://www.youtube.com/@Kayne346" target="_blank"><i class="bi bi-youtube text-dark mx-1"></i></a>
-                <!-- <a href="https://github.com/techgameryt0/" target="_blank"><i class="bi bi-github text-dark mx-1"></i></a> -->
+                <!-- <a href="https://github.com/gamerscodeuniverse" target="_blank"><i class="bi bi-github text-dark mx-1"></i></a> -->
                 <!-- <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
                 <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a> -->
               </div>
@@ -416,7 +416,7 @@
                   Helping you improve and <br> learn better  
                 </p>
                 <a href="https://youtube.com/@gamerscodeuniverse" target="_blank"><i class="bi bi-youtube text-dark mx-1"></i></a>
-                <a href="https://github.com/techgameryt0/" target="_blank"><i class="bi bi-github text-dark mx-1"></i></a>
+                <a href="https://github.com/gamerscodeuniverse" target="_blank"><i class="bi bi-github text-dark mx-1"></i></a>
                 <!-- <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
                 <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a> -->
               </div>
