--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
             <ul class="list-group list-group-flush lead">
               <li class="list-group-item">
                 <span class="fw-bold">Email:</span> 
-                devanshs149@gmail.com
+                gamerscodeuniverse@gmail.com
               </li>
             </ul>
           </div>
