--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
               <ul class="dropdown-menu ">
                 <li><a class="dropdown-item" href="https://discord.gg/sHsr3Dq8S7" target="_blank">Discord</a></li>
                 <li><a class="dropdown-item" href="https://youtube.com/@gamerscodeuniverse" target="_blank">Youtube</a></li>
+                <li><a class="dropdown-item" href="https://www.roblox.com/groups/33365557/Gamers-Code-Universe" target="_blank">Roblox Group</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="https://github.com/gamerscodeuniverse " target="_blank">Github</a></li>
+                <li><a class="dropdown-item" href="https://github.com/gamerscodeuniverse" target="_blank">Github</a></li>
               </ul>
             </li>
           </ul>
@@ -148,8 +149,8 @@
                 </div>
                 <h3 class="card-title mb-3">Just want Source code</h3>
                 <p class="card-text">
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Iure, quas quidem possimus dolorum esse eligendi?
+                  Want Source Code for codes like - Text Editor, Clock etc ⬇ <br>
+                  Join my discord Server for updates!!
                 </p>
                 <a href="https://github.com/gamerscodeuniverse/" class="btn btn-primary" target="_blank">Github</a>
               </div>
@@ -256,7 +257,7 @@
               data-bs-parent="#questions"
             >
               <div class="accordion-body">
-                Just free of cose !!
+                Just free of cost !!
               </div>
             </div>
           </div>
