--- a/index.html
+++ b/index.html
@@ -427,8 +427,29 @@
       </div>
     </section>
 
-    <!-- Contact & Map -->
     <section class="p-5">
+      <div class="container">
+        <div class="row g-4">
+          <!-- <div class="col-md">
+            <h2 class="text-center mb-4">Contact Info</h2>
+            <ul class="list-group list-group-flush lead">
+              <li class="list-group-item">
+                <span class="fw-bold">Email:</span> 
+                gamerscodeuniverse@gmail.com
+              </li>
+            </ul>
+          </div> -->
+          <!-- <div class="col-md">
+            <div id="map"></div>
+          </div> -->
+          <iframe src="https://discord.com/widget?id=1130884746537336943&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+        </div>
+      </div>
+    </section>
+
+
+    <!-- Contact & Map -->
+    <section class="p-5" style="background-color: lightblue;">
       <div class="container">
         <div class="row g-4">
           <div class="col-md">
