--- a/index.html
+++ b/index.html
@@ -442,8 +442,7 @@
           <!-- <div class="col-md">
             <div id="map"></div>
           </div> -->
-          <iframe src="https://discord.com/widget?id=1130884746537336943&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-        </div>
+          <iframe src="https://discord.com/widget?id=1179027908140994560&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>        </div>
       </div>
     </section>
 
