--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
 
 
     <!-- Contact & Map -->
-    <section class="p-5" style="background-color: lightblue;">
+    <section class="p-5" >
       <div class="container">
         <div class="row g-4">
           <div class="col-md">
