--- a/index.html
+++ b/index.html
@@ -430,15 +430,15 @@
     <section class="p-5">
       <div class="container">
         <div class="row g-4">
-          <!-- <div class="col-md">
-            <h2 class="text-center mb-4">Contact Info</h2>
-            <ul class="list-group list-group-flush lead">
-              <li class="list-group-item">
-                <span class="fw-bold">Email:</span> 
-                gamerscodeuniverse@gmail.com
-              </li>
-            </ul>
-          </div> -->
+          <!-- <<div class="col-md"> -->
+            <h2 class="text-center mb-4">Discord</h2>
+            <!-- <ul class="list-group list-group-flush lead"> -->
+              <!-- <li class="list-group-item"> -->
+                <!-- <span class="fw-bold">Email:</span>  -->
+                <!-- gamerscodeuniverse@gmail.com -->
+              <!-- </li> -->
+            <!-- </ul> -->
+          <!-- </div>  -->
           <!-- <div class="col-md">
             <div id="map"></div>
           </div> -->
@@ -448,13 +448,13 @@
 
 
     <!-- Contact & Map -->
-    <section class="p-5" >
+    <section class="p-5" style="background-color: lightcyan;" >
       <div class="container">
         <div class="row g-4">
           <div class="col-md">
             <h2 class="text-center mb-4">Contact Info</h2>
             <ul class="list-group list-group-flush lead">
-              <li class="list-group-item">
+              <li class="list-group-item" style="background-color: lightcyans;">
                 <span class="fw-bold">Email:</span> 
                 gamerscodeuniverse@gmail.com
               </li>
