--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
           <div class="col-md">
             <h2 class="text-center mb-4">Contact Info</h2>
             <ul class="list-group list-group-flush lead">
-              <li class="list-group-item" style="background-color: lightcyans;">
+              <li class="list-group-item" style="background-color: lightcyan;">
                 <span class="fw-bold">Email:</span> 
                 gamerscodeuniverse@gmail.com
               </li>
