--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                   Important Links
               </a>
               <ul class="dropdown-menu ">
-                <li><a class="dropdown-item" href="https://discord.gg/sHsr3Dq8S7" target="_blank">Discord</a></li>
+                <li><a class="dropdown-item" href="https://discord.com/invite/sXkkXh8fqf" target="_blank">Discord</a></li>
                 <li><a class="dropdown-item" href="https://youtube.com/@gamerscodeuniverse" target="_blank">Youtube</a></li>
                 <li><a class="dropdown-item" href="https://www.roblox.com/groups/33365557/Gamers-Code-Universe" target="_blank">Roblox Group</a></li>
                 <li><hr class="dropdown-divider"></li>
@@ -137,7 +137,7 @@
                   Go to our Discord server to find important links for teachers and youtubers who teach programming for free!!
                   Plus Subscribe!!
                 </p>
-                <a href="https://discord.gg/sHsr3Dq8S7" target="_blank" class="btn btn-dark">Discord</a>
+                <a href="https://discord.com/invite/sXkkXh8fqf" target="_blank" class="btn btn-dark">Discord</a>
               </div>
             </div>
           </div>
@@ -179,7 +179,7 @@
               quae similique laboriosam iste minus placeat odit velit quos,
               nulla architecto amet voluptates?
             </p> -->
-            <a href="https://discord.gg/sHsr3Dq8S7" target="_blank" class="btn btn-light mt-3">
+            <a href="https://discord.com/invite/sXkkXh8fqf" target="_blank" class="btn btn-light mt-3">
               <i class="bi bi-chevron-right"></i> Discord
             </a>
           </div>
